# fintrack

./: .editorconfig  .eslintrc.json  .gitignore  .prettierignore  .prettierrc.json  Cargo.toml  LICENSE  README.md  dist-workspace.toml  package-lock.json  package.json  readme.md
.github/workflows/: release.yml
apps/web/: index.html  package.json  pnpm-lock.yaml
apps/web/src/: App.tsx  index.css
apps/web/src/components/layout/: Footer.tsx  Header.tsx
apps/web/src/components/sections/: DownloadsSection.tsx  FeaturesSection.tsx  (+2 more)
apps/web/src/hooks/: use-theme.ts
docs/: article-outline.md  article.md  design.md  freecodecamp-style-guide.md
src/: commands.rs  error.rs  lib.rs  main.rs  model.rs  models.rs  output.rs  utils.rs
src/app/: HomeContent.tsx  globals.css  layout.tsx  page.tsx
src/app/reports/: ReportsContent.tsx  page.tsx
src/app/settings/: SettingsContent.tsx  page.tsx
src/app/transactions/: TransactionsContent.tsx  page.tsx
src/commands/: add.rs  category.rs  clear.rs  delete.rs  describe.rs  dump.rs  export.rs  init.rs  list.rs  subcategory.rs  total.rs  update.rs
src/commands/category/: list.rs
src/commands/subcategory/: add.rs  delete.rs  list.rs  rename.rs
src/components/dashboard/: Header.tsx  MobileSidebar.tsx  Sidebar.tsx  index.ts
src/components/icons/: ChevronDownIcon.tsx  GridIcon.tsx  LogoIcon.tsx  MenuIcon.tsx  MoreIcon.tsx  SearchIcon.tsx  index.ts
src/components/ui/: Avatar.tsx  AvatarGroup.tsx  DashboardCard.tsx  DashboardSummary.tsx  EmptyState.tsx  ErrorBoundary.tsx  LoadingState.tsx  Logo.tsx  Search.tsx  SortableHeader.tsx  StatusDot.tsx  StatusTag.tsx  Tabs.tsx  TabsContent.tsx  TabsList.tsx  TabsTrigger.tsx  TransactionsTable.tsx  index.ts
src/constants/: table.constants.ts
src/contexts/: SearchContext.tsx  SidebarContext.tsx  index.ts
src/data/: dashboard.data.ts  navigation.data.ts  transactions.data.ts  users.data.ts
src/interfaces/: components.interface.ts  dashboard.interface.ts  index.ts  navigation.interface.ts  table.interface.ts  transaction.interface.ts  user.interface.ts
src/utils/: cli.rs  command_prelude.rs  context.rs  file.rs  index.ts  parsers.rs  table.utils.ts
tests/: common.rs  integration_tests.rs
wix/: main.wxs
(+1 files in other folders)
