[package]
name = "fintrack"
version = "0.3.6"
edition = "2024"
authors = ["Stephen Emmanuel <emmanuelstephen024@gmail.com>"]
description = "A local-first CLI financial tracker for managing income and expenses"
license = "MIT"
repository = "https://github.com/steph-crown/fintrack"
keywords = ["finance", "tracker", "cli", "expenses", "income"]
categories = ["command-line-utilities"]
homepage = "https://fintrackcli.netlify.app/"

[package.metadata.wix]
upgrade-guid = "16FA7B2F-0A0B-4749-8982-FD92DB7041E5"
path-guid = "B52FCE48-179F-4203-95BF-51BDEF9E5356"
license = false
eula = false

[dependencies]
chrono = "0.4.42"
clap = { version = "4.5.53", features = ["derive"] }
colored = "2.1"
dirs = "6.0.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_core = "1.0.228"
serde_json = "1.0.148"
strum = { version = "0.26", features = ["derive"] }
tabled = "0.15"

[dev-dependencies]
tempfile = "3.10"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
